Fixed menu styling on smaller screen sizes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,9 +36,25 @@ html[data-theme='dark'] .light-theme-display-component {
   opacity: 1;
 }
 
+@media only screen and (max-width: 1230px) {
+  .navbar__title {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .navbar__items {
+    font-size: 0.8rem;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
   .footer-wrapper .logo {
     height: 40px;
+  }
+
+  .navbar__items {
+    font-size: 0.7rem;
   }
 }
 
